<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ziterz.calculator.MainActivity"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="0"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11">
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonTujuh"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_7"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonDelapan"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_8"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/butonSembilan"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_9"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonBagi"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/div"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11">
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonEmpat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="3"
            android:text="@string/_4"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonLima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="3"
            android:text="@string/_5"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonEnam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="3"
            android:text="@string/_6"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonKali"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="2"
            android:text="@string/kali"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11">
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonSatu"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_1"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonDua"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_2"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonTiga"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_3"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonKurang"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/kurang"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11">
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonTitik"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/titik"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonNol"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_0"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonHitung"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/hasil"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonTambah"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tambah"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/delete"
            android:layout_toLeftOf="@+id/buttonClear"/>
        <Button
            style="?attr/buttonStyle"
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:text="@string/c"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>
